# python-ai-cv

./: .gitignore  Readme.md  slides.md
01-Python+Devtools-Introduction/: .gitignore  01-intro.md  02-control-flow.py  03-exceptions.py  04-loops.py  hello-world.py
01-Python+Devtools-Introduction/01-python-introduction/: 01a-variables.py  02-control-flow.py  06-importing-from-libs.py  07-sample-data.json  07-using-JSON.py
01-Python+Devtools-Introduction/02-advanced-features/: 01-working-with-files.py  02-http-requests.py  03-simple-gui.py  04-on-main.py
01-Python+Devtools-Introduction/03-docker/: docker-compose.yaml  dockerfile  hello-world.py
01-Python+Devtools-Introduction/04-cloud/: Readme.md
01-Python+Devtools-Introduction/advanced-features/: 04-on-main.py
01-Python+Devtools-Introduction/scripts/: 05-lists-dictionaries.py  07-using-JSON.py  08-functions.py  09-oop.py
02-Working-with-libraries/: 02-libraries.md
02-Working-with-libraries/01-Dependency-Management/: 01-dep-management.md
02-libraries+tools/: 02-libraries.md  libraries.md  requirements.txt
02-libraries+tools/01-depmanagement-pip/: requirements.txt  sample.py
02-libraries+tools/02-depmanagement-poetry/: README.md  pyproject.toml
02-libraries+tools/02-depmanagement-poetry/tests/: test_02_depmanagement_poetry.py
03-eating+analyzing-data/: 01-parse-csv.ipynb  02-exploration.ipynb  03-traffic-analysis.ipynb  04-traffic-analysis-geo.ipynb  data.md  requirements.txt
04-AI-tools/: .gitignore  ai.md  exam_task.ipynb  requirements.txt
05-Computer-Vision-Pipeline/: cv-pipeline.md
(+96 files in other folders)
