[tool.poetry]
name = "02-depmanagement-poetry"
version = "0.1.0"
description = ""
authors = ["ztarbug <kronprinzfriedrich@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
