[tool.poetry]
name = "depmanagement"
version = "0.1.0"
description = ""
authors = ["ztarbug <kronprinzfriedrich@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
